bdr.BDR.scala.error
Erreur de compilation :
BDR:3: error: reassignment to val
  if (litMessage="R"){
                ^BDR:6: error: reassignment to val
  } else if (litMessage="L"){
                       ^BDR:9: error: reassignment to val
  } else if (litMessage="I"){
                       ^BDR:12: error: reassignment to val
  } else if (litMessage="A"){
                       ^BDR:14: error: reassignment to val
  } else if (litMessage="B"){
                       ^BDR:17: error: reassignment to val
  } else if (litMessage="C"){
                       ^BDR:21: error: reassignment to val
  } else if (litMessage="Z"){
                       ^BDR:23: error: reassignment to val
  } else if (litMessage="Y") {
                       ^BDR:26: error: reassignment to val
  } else if (litMessage="X"){
                       ^